# phychological-test-new

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
nct_app/: __init__.py  cli.py  config.py  engine.py  layout.py  models.py  storage.py  ui.py  validators.py
tests/: __init__.py  test_engine.py  test_models.py  test_storage.py  test_validators.py
